--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,15 @@
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
     <include src="./partials/example.html"></include>
     <header></header>
-    <main></main>
+    <main>
+      <!--Krowa-->
+      <section>
+        <div class="container">
+          <figure></figure>
+        </div>
+      </section>
+      <!--Krowa ^^-->
+    </main>
     <footer></footer>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
