--- a/src/index.html
+++ b/src/index.html
@@ -45,14 +45,15 @@
             </figcaption>
           </figure>
           <div>
-            <button type="button" [data-modal-open]>Read more ></button>
+            <button type="button" data-modal-open>Read more ></button>
           </div>
           <!--Modal-->
-          <div class="backdrop is-hidden" [data-modal]>
+          <div class="backdrop is-hidden" data-modal>
             <figure>
-              <video autoplay controls width="400" height="400">
+              <video controls width="400" height="400">
                 <source
-                  src="images/Video/How is Ice Cream Made  Ever Wonder  Highlights Kids.mp4"
+                  src="./images/Video/How_is_Ice_Cream_Made _Ever_Wonder_Highlights_Kids.mp4"
+                  type="video/mp4"
                 />
               </video>
               <figcaption>
