zmiana video na inframe

--- a/src/index.html
+++ b/src/index.html
@@ -50,11 +50,15 @@
           <!--Modal-->
           <div class="backdrop is-hidden" [data-modal]>
             <figure>
-              <video autoplay controls width="400" height="400">
-                <source
-                  src="images/Video/How is Ice Cream Made  Ever Wonder  Highlights Kids.mp4"
-                />
-              </video>
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/hO-7cz7gyAY"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
               <figcaption>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
