--- a/src/index.html
+++ b/src/index.html
@@ -9,216 +9,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
-
     />
   </head>
   <body>
-    <header class="header">
-      <div class="header__container container">
-          <nav class="nav">
-              <img src="./images/LogoDesktop.svg" alt="logo" width="40" height="37">
-              <ul class="nav__list">
-                  <li class="nav__item"><a class="nav__link" href="">Home</a></li>
-                  <li class="nav__item"><a class="nav__link" href="">How it`s made?</a></li>
-                  <li class="nav__item"><a class="nav__link" href="">Our products</a></li>
-                  <li class="nav__item"><a class="nav__link" href="">Contact</a></li>
-              </ul>
-<<<<<<< Updated upstream
-              <button class="header__mobile-menu js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-                  <svg width="32" height="32" fill="currentColor" viewBox="0 0 20 20"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <path fill-rule="evenodd"
-                          d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                          clip-rule="evenodd"></path>
-                  </svg>
-              </button>
-              <button type="button" class="button" data-modal-open>Buy now</button>
-          </nav>
-      </div>
-  </header>
-=======
-              <ul class="nav__buttons-list">
-                  <li><button class="header__mobile-menu js-open-menu" aria-expanded="false"
-                          aria-controls="mobile-menu">
-                          <svg width="32" height="32" fill="currentColor" viewBox="0 0 20 20"
-                              xmlns="http://www.w3.org/2000/svg">
-                              <path fill-rule="evenodd"
-                                  d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                                  clip-rule="evenodd"></path>
-                          </svg>
-                      </button></li>
-                  <li><button type="button" class="button" data-modal-open>Buy now</button></li>
-              </ul>
-          </nav>
-      </div>
-  </header>
-  <!-- Header END  -->
->>>>>>> Stashed changes
-    <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. -->
-    <include src="./partials/example.html"></include>
-    <!--products-->
-    <section>
-        <div class="products container">
-          <p class="products__label">100% natural</p>
-          <h2 class="products__title">Products</h2>
-          <ul class="products__grid">
-            <li class="products__list products__list--color-green">
-              <img
-                class="products__img"
-                src="./images/ice-cream.jpg"
-                alt="cup of ice cofee"
-              />
-              <h3 class="products__title-card">ice cream</h3>
+    <include src="./partials/contacts.html"></include>
 
-              <p class="products__text">
-                Soft ice cream with a delicate taste. Made with milk, cream,
-                sugar and natural stabilizer
-              </p>
-              <button
-                class="products__btn-service"
-                type="button"
-                data-modal-open
-              >
-                <svg class="" width="40" height="25">
-                  <use href="./images/icons.svg#icon-arrow"></use>
-                </svg>
-              </button>
-            </li>
-            <li class="products__list products__list--color-yellow">
-              <img
-                class="products__img"
-                src="./images/ice-coffee.jpg"
-                alt="cup of ice cofee"
-              />
-              <h3 class="products__title-card">ice coffee</h3>
-
-              <p class="products__text">
-                Fragrant invigorating drink created from 100% natural
-                ingredients without the use of preservatives and flavor
-                enhancers
-              </p>
-              <button
-                class="products__btn-service"
-                type="button"
-                data-modal-open
-              >
-                <svg class="" width="40" height="25">
-                  <use href="./images/icons.svg#icon-arrow"></use>
-                </svg>
-              </button>
-            </li>
-            <li class="products__list products__list--color-orange">
-              <img
-                class="products__img"
-                src="./images/milkshakes.png"
-                alt="cup of ice cofee"
-              />
-              <h3 class="products__title-card">milkshakes</h3>
-
-              <p class="products__text">
-                Sweet drinks based on milk and ice cream, supplemented with
-                syrups, fruits, berries and other sweets of your choice
-              </p>
-              <button
-                class="products__btn-service"
-                type="button"
-                data-modal-open
-              >
-                <svg class="" width="40" height="25">
-                  <use href="./images/icons.svg#icon-arrow"></use>
-                </svg>
-              </button>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <!--products^^-->
-<!--Krowa-->
-      <section>
-        <div class="container">
-          <article>
-            <p>TRADITION AND LOVE</p>
-            <h2>HOW IT'S MADE</h2>
-          </article>
-          <figure>
-            <img
-              src="images/mobile/cow.jpg"
-              alt="cow on grass"
-              srcset="images/mobile/x2/cow@2x.jpg"
-            />
-            <figcaption>
-              <p>
-                Ice is a place where you will become not only a little happier,
-                but also healthier. Health is the main value for us, and we
-                follow it when creating our handmade desserts.
-              </p>
-              <p>
-                We use traditional recipes and 100% natural ingredients. Our
-                products are so natural that they can be given to children from
-                the age of three years. Sweets lovers can expect 55 types of ice
-                cream, 15 types of coffee and 23 milkshakes.
-              </p>
-              <p>This is enough to choose ice cream and coffee for any mood!</p>
-            </figcaption>
-          </figure>
-          <div>
-            <button type="button" [data-modal-open]>Read more ></button>
-          </div>
-          <!--Modal1234-->
-          <div class="backdrop is-hidden" [data-modal]>
-            <figure>
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/hO-7cz7gyAY"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe>
-              <figcaption>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et Lorem ipsum dolor
-                  sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                  incididunt ut labore et
-                </p>
-              </figcaption>
-            </figure>
-            <button class="order__btn-close" type="button" data-modal-close>
-              <b>X</b>
-            </button>
-          </div>
-          <!--Modal^^-->
-          <figure>
-            <svg><use href="images/how_made_icon.svg#icon-cow-head"></use></svg>
-            <figcaption>
-              <h3>721</h3>
-              <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-            </figcaption>
-          </figure>
-          <figure>
-            <svg><use href="images/how_made_icon.svg#icon-ketel"></use></svg>
-            <figcaption>
-              <h3>16KG</h3>
-              <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-            </figcaption>
-          </figure>
-          <figure>
-            <svg>
-              <use href="images/how_made_icon.svg#icon-ice-cream"></use>
-            </svg>
-            <figcaption>
-              <h3>84</h3>
-              <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-            </figcaption>
-          </figure>
-        </div>
-      </section>
-      <!--Krowa ^^-->
-    </main>
-    <footer></footer>
-      <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
   </body>
 </html>
