--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <include src="./partials/contacts.html"></include>
+    <include src="./partials/header.html"></include>
 
     <script src="./index.js" type="module"></script>
   </body>
