--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <include src="./partials/header.html"></include>
-
+    <include src="./partials/advantages.html"></include>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
