--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
+    <include src="./partials/products.html"></include>
     <include src="./partials/header.html"></include>
     <include src="./partials/advantages.html"></include>
     <script src="./index.js" type="module"></script>
