--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
       <body> 
-            <main class="swiper">
+            <main>
                   <!-- Slider main container -->
                   <div class="swiper swiper-initialized swiper-horizontal swiper-backface-hidden">
                         <!-- Additional required wrapper -->
