--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                               ...
                               <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 3"
                                     data-swiper-slide-index="1" style="width: 135px;">
-                                    <img class="swiper__gallery" src="/images/6.reviews/lodyDesktop1x.jpg.jpg">
+                                    <img class="swiper__gallery" src="/utils/images/reviews/lodyDesktop1x.jpg.jpg">
             
-                                    <img class="swiper__image" src="images/6.reviews/Emily1x.jpg.jpg" alt="kobieta">
+                                    <img class="swiper__image" src="/utils/images/reviews/Emily1x.jpg.jpg" alt="kobieta">
                                     <p class="swiper__text">
                                           I love visiting your cafe. You prepare the most delicious ice
                                           cream in Los Angeles! In addition, you have beautiful serving,
