--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
+    <include src="./partials/footer.html"></include>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
