--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <include src="./partials/products.html"></include>
+    <!-- <include src="./partials/products.html"></include> -->
     <include src="./partials/header.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/contacts.html"></include>
