--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <include src="./partials/products.html"></include>
     <include src="./partials/header.html"></include>
     <include src="./partials/advantages.html"></include>
+    <include src="./partials/customer-reviews.html"></include>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
