--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,10 @@
     <main>
       <include src="./partials/advantages.html"></include>
       <include src="./partials/contacts.html"></include>
+      <include src="./partials/modal-about.html"></include>
     </main>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
-    <script src="./JS/modal.js"></script>
+    <script src="./js/modal.js"></script>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
