--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
       <include src="./partials/header.html"></include>
     </header>
     <main>
+      <include src="./partials/products.html"></include>
       <include src="./partials/advantages.html"></include>
       <include src="./partials/contacts.html"></include>
       <include src="./partials/modal-about.html"></include>
