--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
       <include src="./partials/advantages.html"></include>
       <include src="./partials/contacts.html"></include>
       <include src="./partials/modal-about.html"></include>
+      <include src="./partials/footer.html"></include>
     </main>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./js/modal.js"></script>
