--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
       <include src="./partials/hero.html"></include>
       <include src="./partials/products.html"></include>
       <include src="./partials/advantages.html"></include>
+      <include src="./partials/customer-reviews.html"></include>
       <include src="./partials/contacts.html"></include>
       <include src="./partials/modal-about.html"></include>
       <include src="./partials/footer.html"></include>
