--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
       <include src="./partials/footer.html"></include>
     </main>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
-    <script src="./js/modal.js"></script>
+    <script src="./JS/modal.js"></script>
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
