--- a/src/index.html
+++ b/src/index.html
@@ -43,14 +43,14 @@
       <include src="./partials/footer.html"></include>
     </main>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
-    <script src="./JS/modal.js"></script>
+    <script src="./js/modal.js"></script>
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
       crossorigin="anonymous">
     </script>
-    <script defer src="./JS/mobile-menu.js"></script>
+    <script defer src="./js/mobile-menu.js"></script>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
