--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
   <body>
     <!-- <include src="./partials/products.html"></include> -->
     <header>
-      <include src="./partials/header.html"></include>
+      <include src="./partials/heading.html"></include>
     </header>
     <main>
       <include src="./partials/hero.html"></include>
