--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Josefin+Sans&family=Montserrat:wght@400;500;600;700;800;900&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&family=Seymour+One&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Josefin+Sans&family=Montserrat:wght@400;500;600;700;800;900&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&family=Seymour+One&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Seymour+One&display=swap"
@@ -27,9 +30,8 @@
   </head>
   <body>
     <!-- <include src="./partials/products.html"></include> -->
-    <header>
-      <include src="./partials/header.html"></include>
-    </header>
+    <include src="./partials/header.html"></include>
+
     <main>
       <include src="./partials/hero.html"></include>
       <include src="./partials/products.html"></include>
@@ -45,8 +47,8 @@
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
       integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-      crossorigin="anonymous">
-    </script>
+      crossorigin="anonymous"
+    ></script>
     <script defer src="./js/mobile-menu.js"></script>
     <script src="./index.js" type="module"></script>
   </body>
